Fixing off-center content.

--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,6 @@ footer, #jpmpush {
 
 article {
     margin: 2em 5em 1em 5em;
-    width: 80%;
 }
 
 article.blog p {
